--- a/style/src/_params.scss
+++ b/style/src/_params.scss
@@ -34,6 +34,10 @@ table.paramsTable {
         -webkit-font-smoothing: antialiased;
     }
 
+    .field-column {
+        text-align: left;
+    }
+
     tr.field {
 
         .multi-control-table {
